--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>PLADECO RANCAGUA</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M3MFCSQX0W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-5XS5EEM8SD');
+</script>
   </head>
   <body>
     <noscript>Debes habilitar JavaScript en tu navegador para poder utilizar esta app.</noscript>
