--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
     <title>PLADECO RANCAGUA</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-M3MFCSQX0W"></script>
+<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaZyIMlislVJaujgsX927kNS8e0XvvWwg&libraries=places">
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
