--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es/cl">
+
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -24,16 +25,19 @@
     -->
     <title>PLADECO RANCAGUA</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M3MFCSQX0W"></script>
-<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaZyIMlislVJaujgsX927kNS8e0XvvWwg&libraries=places">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-5XS5EEM8SD');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M3MFCSQX0W"></script>
+    <!-- MAPS API FROM cdir-webviews project -->
+    <script defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkgITniwTLVG_Ef4Yy-3mEwhnP3rnJ_pk&libraries=places">
+      </script>
+    <script>
+      window.dataLayer=window.dataLayer||[];
+      function gtag() {dataLayer.push(arguments);}
+      gtag('js',new Date());
+      gtag('config','G-5XS5EEM8SD');
+    </script>
   </head>
+
   <body>
     <noscript>Debes habilitar JavaScript en tu navegador para poder utilizar esta app.</noscript>
     <div id="root"></div>
@@ -48,4 +52,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
 </html>
